@@ -1,6 +1,7 @@
 2009-01-10  Marcus Krause   <marcus#exp2009@t3sec.info>
 
 	* Bug #2439: In case of a modifed HASHCOUNT, a non-valid PHPass password would be set
+	* Bug #2438: Missing 2nd argument for method call updatePassword in service class
 
 
 2009-01-06  Marcus Krause   <marcus#exp2009@t3sec.info>
